fix(runner): configure SSH keep-alive for long-running drain operations (#952)
The production deployment failed because SSH connection dropped during
the drain wait phase. This adds:
- ServerAliveInterval=30: Send keep-alive every 30 seconds
- ServerAliveCountMax=10: Allow up to 10 missed responses
- ControlPersist=3600s: Keep connection alive for 1 hour

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -13,4 +13,5 @@ stdout_callback = yaml
 callback_whitelist = profile_tasks
 
 [ssh_connection]
-ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o StrictHostKeyChecking=no
+# Keep SSH connection alive during long operations (drain can take hours)
+ssh_args = -o ControlMaster=auto -o ControlPersist=3600s -o StrictHostKeyChecking=no -o ServerAliveInterval=30 -o ServerAliveCountMax=10
