Revert "feat(lifecycle): add postCreateCommand hook and hardcode working_dir (#1077)" (#1106)
This reverts commit 86f70777701d2d8715edec620e804c9ceeea0bad.

--- a/e2e/fixtures/configs/vm0-env-expansion.yaml
+++ b/e2e/fixtures/configs/vm0-env-expansion.yaml
@@ -5,6 +5,7 @@ agents:
     description: "Test agent for environment variable expansion"
     provider: claude-code
     image: "vm0/claude-code:dev"
+    working_dir: /home/user/workspace
     environment:
       TEST_VAR: "${{ vars.testVar }}"
       TEST_SECRET: "${{ secrets.TEST_SECRET }}"
