--- a/e2e/fixtures/configs/vm0-versioning.yaml
+++ b/e2e/fixtures/configs/vm0-versioning.yaml
@@ -5,3 +5,4 @@ agents:
     description: "Test agent for version testing"
     provider: claude-code
     image: "vm0/claude-code:dev"
+    working_dir: /home/user/workspace
