--- a/turbo/apps/web/package.json
+++ b/turbo/apps/web/package.json
@@ -27,6 +27,7 @@
     "@neondatabase/serverless": "^1.0.1",
     "@opentelemetry/api": "^1.9.0",
     "@t3-oss/env-nextjs": "^0.13.8",
+    "@tabler/icons-react": "^3.36.1",
     "@ts-rest/core": "3.53.0-rc.1",
     "@ts-rest/serverless": "3.53.0-rc.1",
     "@vm0/core": "workspace:*",
